# cs500-raytracing

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  testscene.scn
cmake/: FindAssimp.cmake  FindEigen.cmake  FindGTest.cmake
scenes/: sample_scene.scn  testrefl.scn  testscene2.scn  testscene3.scn
src/: camera.cpp  camera.h  geom.cpp  geom.h  main.cpp  material.h  minimizer.cpp  minimizer.h  ray_shapes.cpp  ray_shapes.h  raytrace.cpp  raytrace.h  readAssimpFile.cpp  realtime.cpp  realtime.h  write_result.cpp  write_result.h
src/test/: ray_aabb.cpp  ray_cylinder.cpp  ray_sphere.cpp  ray_triangle.cpp  temp.cpp
